# fortheloveofRust

./: README.md
AnyHow/: Cargo.toml  readme.md
AnyHow/src/: main.rs
Effective Rust/Types/src/: main.rs
ErrorLogs/: Cargo.toml  errors.txt  readme.md
ErrorLogs/src/: main.rs
Modules/: Cargo.toml  readme.md
Modules/src/: main.rs
Modules/src/content/: mod.rs  person.rs  profession.rs
Patterns/: Cargo.toml
Redis/: readme.md
Redis/basics/: Cargo.toml
Redis/basics/src/: main.rs
basics/: readme.md
basics/src/: main.rs
basics/src/basics/: enums.rs  generics.rs  lifetimes.rs  mod.rs  smart_pointers.rs  structs.rs  trait.rs  traits.rs
cli/basic/: Cargo.toml
cli/basic/src/: main.rs
cli/clap-builder/: Cargo.toml
cli/clap-builder/src/: main.rs
cli/clap-derive/: Cargo.toml
cli/clap-derive/src/: main.rs
cli/continous/: Cargo.toml  readme.md
cli/continous/src/: main.rs
concurrency/atomicsandlocks/: readme.md
concurrency/atomicsandlocks/chapter_1_basics_threads/: Cargo.toml
concurrency/atomicsandlocks/chapter_1_basics_threads/src/: main.rs
concurrency/atomicsandlocks/chapter_2_atomics/: Cargo.toml
concurrency/atomicsandlocks/chapter_2_atomics/src/: main.rs
concurrency/atomicsandlocks/chapter_5_channels/: Cargo.toml  readme.md
gRPC/helloworld-tonic/: Cargo.toml  readme.md
gRPC/helloworld-tonic/proto/: helloworld.proto
gRPC/helloworld-tonic/src/: client.rs  server.rs
gRPC/routeguide/: Cargo.toml  readme.md
gRPC/routeguide/src/: server.rs
iter/: readme.md
iter/src/: main.rs
(+12 files in other folders)
